syntax = "proto3";

option go_package = "./proto";

package endpoint.brainboost.chat.v2;

import "google/protobuf/timestamp.proto";

import "collections.proto";

service ChatService {
  rpc Chat(Prompt) returns (ChatMessage);
  rpc ChatWithDocuments(DocumentsPrompt) returns (ChatMessage);
  rpc GetChatMessages(collections.v1.Collection) returns (ChatMessages);
  rpc GetChatMessage(MessageID) returns (ChatMessage);
}

message DocumentsPrompt {
  string prompt = 1;
  string collection_id = 2;
  ModelOptions model_options = 3;

  message Document {
    string id = 1;
    string filename = 2;
    repeated uint32 pages = 3;
  }

  repeated Document documents = 4;
}

message Prompt {
  string prompt = 1;
  string collection_id = 2;
  ModelOptions model_options = 3;

  // Search options
  float threshold = 6;
  uint32 limit = 7;
}

message ModelOptions {
  string model = 4;
  float temperature = 5;
  uint32 max_tokens = 6;
}

message ChatMessage {
  string id = 1;
  string collection_id = 2;
  string prompt = 3;
  string text = 4;
  ModelOptions model_options = 5;
  optional google.protobuf.Timestamp timestamp = 6;

  // Chunk ids
  repeated string references = 7;

  // Chunk id --> score
  map<string, float> scores = 8;
}

message MessageID {
  string id = 1;
}

message ChatMessages {
  repeated string ids = 1;
}